--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "tailwindcss": "^2.2.7"
   },
   "scripts": {
-    "build.html": "node yaml2json.js && ejs ./index.ejs -f data.json -o public/index.html",
+    "build:html": "node yaml2json.js && ejs ./index.ejs -f data.json -o public/index.html",
     "build:tailwind": "node_modules/.bin/postcss scss/style.scss -o public/css/style.css",
     "watch:tailwind": "node_modules/.bin/postcss scss/style.scss -o public/css/style.css --watch"
   },
