Some typo fixes

--- a/data.yml
+++ b/data.yml
@@ -6,16 +6,16 @@ position: "Computer Science Student & Freelancer"
 links:
   - url: "https://github.com/riiswa"
     icon: "fab fa-github"
-  - url: "https://www.instagram.com/riiswa/"
+  - url: "https://www.instagram.com/riiswa"
     icon: "fab fa-instagram"
   - url: "https://www.linkedin.com/in/warisr"
     icon: "fab fa-linkedin"
-  - url: "https://warisradji.com/"
+  - url: "https://warisradji.com"
     icon: "fas fa-globe"
 details:
 
   - key: "Age"
-    value: "20 years"
+    value: "21 years"
   - key: "Location"
     value: "France, Paris/Bordeaux"
   - key: "Phone"
@@ -26,7 +26,7 @@ details:
     value: "https://warisradji.com"
   - key: "Interests"
     value: "Street Lifting, Competitive Programming, Biology"
-description: "Versatile Developer fascinated by AI and procedural generation. I mainly worked in Scala but I can adapt to other languages while paying a lot of care to software design and performance. I have proven myself through my jobs and my open-source contributions and I am ready to take on new challenges."
+description: "Versatile Developer fascinated by AI and procedural generation. I mainly worked in Scala, but I can adapt to other languages while paying a lot of care to software design and performance. I have proven myself through my jobs and my open-source contributions and I am ready to take on new challenges."
 jobs:
   - date: "Jul 2021 - Aug 2021"
     company: "Centre Hospitalier Universitaire de Bordeaux"
@@ -39,6 +39,8 @@ jobs:
         icon: "img/ico/r.png"
       - name: "SQLite"
         icon: "img/ico/sqlite.png"
+      - name: "Docker"
+        icon: "img/ico/docker.png"
   - date: "Oct 2020 - Apr 2021"
     company: "Wellputt USA"
     logo: "img/logo/wellputt.png"
@@ -137,15 +139,15 @@ projects:
   - date: "2021"
     name: "Eirb'IA"
     position: "CO-FOUNDER (with Hector Piteau)"
-    description: "Creation and management of the Artificial Intelligence club of ENSEIRB-MATMECA trough workshops, conferences, debates, competitions and paper popularization."
+    description: "Creation and management of the Artificial Intelligence Club of ENSEIRB-MATMECA through workshops, conferences, debates, competitions and paper popularization."
   - date: "2021"
     name: "Hackathon DefInSpace"
     position: "LEAD TECH"
-    description: " 24 hours to imagine solutions for space defense. My solution consisted in the implementation of a robust satellite network based on the Blockchain to ensure a reliable exchange of information."
+    description: "24 hours to imagine solutions for space defense. My solution consisted in the implementation of a robust satellite network based on the Blockchain to ensure a reliable exchange of information."
   - date: "2020-2021"
     name: "Pokémon Workshop"
     position: "LEAD BACK-END DEVELOPER"
-    description: "Creation of Pokémon Studio, a tool developed in React to create its Pokémon game project more simply. The goal is to replace Ruby Host, the Database editor, and to allow more relevance by leaving RPG Maker XP."
+    description: "Creation of Pokemon Studio, a tool developed in React to create its Pokemon game project more simply. The goal is to replace Ruby Host, the Database editor, and to allow more relevance by leaving RPG Maker XP."
   - date: "2020"
     name: "Scala Retro"
     position: "CONTRIBUTOR"
