--- a/data.yml
+++ b/data.yml
@@ -26,7 +26,7 @@ details:
     value: "https://warisradji.com"
   - key: "Interests"
     value: "Street Lifting, Competitive Programming, Biology"
-description: "Versatile Developer fascinated by AI and procedural generation. I mainly worked in Scala, but I can adapt to other languages while paying a lot of care to software design and performance. I have proven myself through my jobs and my open-source contributions and I am ready to take on new challenges."
+description: "Versatile Developer with 3+ years experience of extensive knowledge in Software Design & Development with willingness to learn and master Data Engineering and Data Science. Functional Programming & Scala adept. Seeking a challenging position in an innovative & state-of-the-art company or research laboratory."
 jobs:
   - date: "Jul 2021 - Aug 2021"
     company: "Centre Hospitalier Universitaire de Bordeaux"
