--- a/data.yml
+++ b/data.yml
@@ -2,7 +2,7 @@ zoom: "62%"
 title: "Waris Radji - Resume"
 firstName: "Waris"
 lastName: "Radji"
-position: "Artificial Inteligence Student & Freelancer"
+position: "Artificial Intelligence Research Student & Freelancer"
 links:
   - url: "https://github.com/riiswa"
     icon: "fab fa-github"
@@ -13,7 +13,6 @@ links:
   - url: "https://warisradji.com"
     icon: "fas fa-globe"
 details:
-
   - key: "Age"
     value: "22 years"
   - key: "Location"
@@ -38,7 +37,9 @@ jobs:
       - name: "Scala"
         icon: "img/ico/scala.png"
       - name: "Scalameta"
-        icon: "img/ico/scala.png"
+        icon: "img/ico/scalameta.png"
+    id: lunatech
+    link: https://github.com/scalameta/metals
   - date: "Jul 2021 - Aug 2021"
     company: "Centre Hospitalier Universitaire de Bordeaux"
     logo: "img/logo/chu-bdx.png"
@@ -52,6 +53,7 @@ jobs:
         icon: "img/ico/sqlite.png"
       - name: "Docker"
         icon: "img/ico/docker.png"
+    id: chu-bdx
   - date: "Jun 2021 - Jun 2022"
     company: "Le Connecteur"
     logo: "img/logo/chu-bdx.png"
@@ -60,9 +62,11 @@ jobs:
     description: "Creation of cloud functions and a database to manage the reservation of a coworking space, after the purchase of tickets via a WooCommerce site."
     badges:
       - name: "Node.js"
-        icon: "img/ico/r.png"
+        icon: "img/ico/nodejs.png"
       - name: "Firebase"
         icon: "img/ico/firebase.png"
+    id: connecteur
+    link: https://www.leconnecteur-biarritz.fr/
   - date: "Oct 2020 - Apr 2021"
     company: "Wellputt USA"
     logo: "img/logo/wellputt.png"
@@ -78,8 +82,10 @@ jobs:
         icon: "img/ico/firebase.png"
       - name: "SQLite"
         icon: "img/ico/sqlite.png"
+    id: wellputt
+    link: https://play.google.com/store/apps/details?id=com.wellputt.wellputt
   - date: "Apr 2020 - Aug 2020"
-    company: "CNRS - Laboratoire d’Océanographie et du Climat"
+    company: "CNRS - Laboratoire d'Océanographie et du Climat"
     logo: "img/logo/locean.png"
     arrow: 50
     position: "FULL-STACK DATA DEVELOPER • Internship • Paris"
@@ -99,6 +105,7 @@ jobs:
         icon: "img/ico/chartjs.png"
       - name: "RabbitMQ"
         icon: "img/ico/rabbitmq.png"
+    id: locean
   - date: "Jul 2019 - Aug 2019"
     company: "CNRS - Northern Paris Computer Science Lab"
     logo: "img/logo/lipn.png"
@@ -116,6 +123,8 @@ jobs:
         icon: "img/ico/matplotlib.png"
       - name: "Jupyter"
         icon: "img/ico/jupyter.png"
+    id: lipn
+    link: https://github.com/Clustering4Ever/Clustering4Ever
 educations:
   - date: "2022 -2023"
     degree: "Numerics Graduate Program - Optimisation and Decision"
@@ -128,10 +137,11 @@ educations:
       - Mathematical Modelling and Programming
       - Constraint Programming
       - Energy considerations in deep learning
+    link: https://college-doctoral.u-bordeaux.fr/en/Graduate-Research-School/Graduate-Programs/Numerics
   - date: "2020 - 2023"
     degree: "Engineer's degree in Computer Science - Artificial Intelligence Major - PhD track "
     logo: "img/logo/enseirb.png"
-    school: "ENSEIRB-MATMECA – Bordeaux Graduate School in Electronics, Computer Science, Telecommunications, Mathematics and Mechanics"
+    school: "ENSEIRB-MATMECA - Bordeaux Graduate School in Electronics, Computer Science, Telecommunications, Mathematics and Mechanics"
     description: "Master the necessary fundamental, theoretical and practical aspects of the main fields of computer sciences in order to develop. I joined the PhD track, which prepares engineering students for scientific research and its applications, encourages R&D vocations and facilitates the understanding of doctoral studies, through seminars, round tables, visits, projects, specific modules, etc."
     arrow: 50
     knowledges:
@@ -146,6 +156,7 @@ educations:
       - System Programming
       - Computability Theory
       - Type System
+    link: https://enseirb-matmeca.bordeaux-inp.fr/fr/informatique
   - date: "2018 - 2020"
     degree: "Technical college degree in Computer Science"
     logo: "img/logo/uspn.png"
@@ -166,50 +177,67 @@ educations:
       - Operational Research
       - Computer Network
 projects:
-  - date: "2022 (Active)"
+  - date: "2022"
     name: " GOOGLE ROADEF/EURO challenge 2012"
     position: "APPRENTICE RESEARCHER"
-    description: "1 week to solve a machine reassignment problem, limited by hard constraints, as for example resource capacity constraints, and process dependencies. We mainly used mixed integer programming with python-MIP to find a solution."
+    description: "1 week to solve a machine reassignment problem, limited by hard constraints. I have mathematically modeled the problem as a system of linear equation, and I have solved it with Mixed Integer Programming methods using the Python-MIP library."
+    id: gro
+    link: https://github.com/Flopsky/google-roadef-euro-2012
   - date: "2022 (Active)"
     name: "Lunaconf"
     position: "ANDROID KOTLIN DEVELOPER"
     description: "Development of an application to help attendees follow the Lunaconf conference, through an interactive schedule."
+    id: lunaconf
   - date: "2022"
     name: "Universal adversarial perturbations"
     position: "APPRENTICE RESEARCHER"
-    description: "Reproduction of an experiment from the paper \"Universal adversarial perturbations\" (accepted at CVPR 2017) consisting in proving the efficiency of universal perturbations on the VGG11 architecture."
+    description: 'Reproduction of an experiment from the paper "Universal adversarial perturbations" (accepted at CVPR 2017) consisting in proving the efficiency of universal perturbations on the VGG11 architecture.'
+    id: uap
+    link: https://github.com/riiswa/universal
   - date: "2022"
     name: "MindMail"
     position: "DEVELOPER"
-    description: "Creation of an \"intelligent\" webmail client, capable of classifying mails by automatically determining the different categories. An interactive interface allows to visualize the created clusters."
+    description: 'Creation of an "intelligent" webmail client, capable of classifying mails by automatically determining the different categories. An interactive interface allows to visualize the created clusters.'
+    id: mindmail
   - date: "2021-2022 (Active)"
     name: "Eirb'IA"
     position: "CO-FOUNDER (with Hector Piteau)"
     description: "Creation and management of the Artificial Intelligence Club of ENSEIRB-MATMECA through workshops, conferences, debates, competitions and paper popularization."
+    id: eirbia
   - date: "2021"
     name: "Hackathon DefInSpace"
     position: "LEAD TECH"
     description: "24 hours to imagine solutions for space defense. My solution consisted in the implementation of a robust satellite network based on the Blockchain to ensure a reliable exchange of information."
+    id: definspace
   - date: "2020-2022 (Active)"
-    name: "Pokémon Workshop"
+    name: "Pokémon Studio"
     position: "LEAD BACK-END DEVELOPER"
     description: "Creation of Pokemon Studio, a tool developed in React to create its Pokemon game project more simply. The goal is to replace Ruby Host, the Database editor, and to allow more relevance by leaving RPG Maker XP."
+    id: studio
+    link: https://www.youtube.com/watch?v=kvfdrS4fCbg&ab_channel=Pok%C3%A9monWorkshop
   - date: "2020-2022 (Active)"
     name: "Scala Retro"
     position: "MAINTAINER"
     description: "Development of a sbt plugin for Scala Retro, a package that allows to generate UML Class Diagrams from Scala source code."
+    id: retro
+    link: https://github.com/scala-retro
   - date: "2019-2021"
     name: "Clustering4Ever"
     position: "CONTRIBUTOR"
     description: "Implement various ML algorithms into Clustering4Ever, a Big Data Clustering Library gathering clustering, unsupervised algorithms, and quality indices, written in Scala and Spark."
+    id: c4e
+    link: https://github.com/Clustering4Ever/Clustering4Ever
   - date: "2019"
     name: "Hackathon Blockchain Margo X UNICEF"
     position: "BLOCKCHAIN DEVELOPER"
     description: "Develop in 48 hours a solution to record the key stages of the child's life on the Blockchain. I developed part of the Node.js back-end and wrote Solidity smart contracts to deploy them on the Ethereum Blockchain."
+    id: margo
   - date: "2018"
     name: "Ant Colony Simulator"
     position: "MAIN DEVELOPER"
     description: "Open source project about the simulation of an intelligent ant colony looking for the shortest path to a food source."
+    id: ant
+    link: https://github.com/riiswa/colony-ant-simulator
 skills:
   - icon: fas fa-code
     category: Scala
